# x5parser

./: .gitignore  Cargo.toml  README.md  config.json  cookies  pyaterochka_cookies  pyaterochka_stores_coord.json
src/: browser_utils.rs  db.rs  error.rs  main.rs
src/parser/: mod.rs  pyaterochka.rs
src/parser/models/: mod.rs  pyaterochka.rs
