[package]
name = "x5parser"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", features = ["default"] }
serde = "1"
serde_json = "1.0"
thiserror = "2"
chrono = "0.4"
rand = "0.9.2"
